Obtener sale usando token
